testsuite/poke.pkl/struct-types-diag-8.pk
/* { dg-do compile } */

type Bar = struct { int i; long j; fun ja = void: {} };

var b = Bar @ 0#B;
b.jorl; /* { dg-error "" } */
